fix(transition): fade in behind new content

--- a/src/components/common/layout/background.module.scss
+++ b/src/components/common/layout/background.module.scss
@@ -2,7 +2,7 @@
 
 .background_container,
 .background {
-  position: absolute;
+  position: fixed;
   z-index: z-index.$behind;
   width: 100%;
   height: 100%;
